<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarVeterinarioActivity">

    <Button
        android:id="@+id/btn_vet_camera"
        android:layout_width="196dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_vet_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_vet_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="72dp"
        android:text="@string/btn_vet_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/btn_vet_camera" />

    <EditText
        android:id="@+id/edt_vet_nome"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/edt_vet_nome"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_vet_foto" />

    <EditText
        android:id="@+id/edt_vet_especialidade"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edt_vet_especialidade"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_vet_nome" />

    <EditText
        android:id="@+id/edt_vet_experiencia"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edt_vet_experiencia"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_vet_especialidade" />

    <EditText
        android:id="@+id/edt_vet_idade"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edt_vet_idade"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_vet_experiencia" />

    <EditText
        android:id="@+id/edt_vet_endereco"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edt_vet_endereco"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_vet_idade" />

    <Button
        android:id="@+id/btn_vet_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_vet_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_vet_endereco" />

    <Button
        android:id="@+id/btn_vet_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_vet_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_vet_cadastrar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="115dp"
        android:layout_height="117dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>